tests/baselines/reference/parserConstructorDeclaration9.errors.txt
parserConstructorDeclaration9.ts(2,15): error TS1092: Type parameters cannot appear on a constructor declaration.


==== parserConstructorDeclaration9.ts (1 errors) ====
    class C {
      constructor<T>() { }
                  ~
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
    }